force-app/main/default/objects/Inventory__c/fields/Accent_color__c.field-meta.xml
<CustomField>
    <fullName>Accent_color__c</fullName>
    <label>Accent color</label>
    <length>30</length>
    <type>Text</type>
</CustomField>