force-app/main/default/objects/Inventory__c/fields/ACV_Floored_Difference__c.field-meta.xml
<CustomField>
    <fullName>ACV_Floored_Difference__c</fullName>
    <formula>IF(RecordType.DeveloperName = &apos;Used_Boats&apos;,ACV__c - Amount_Boat_Is_Floored__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ACV Floored Difference</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>