force-app/main/default/objects/Inventory__c/fields/Amount_Boat_Is_Floored__c.field-meta.xml
<CustomField>
    <fullName>Amount_Boat_Is_Floored__c</fullName>
    <label>Amount Boat Is Floored</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>