force-app/main/default/objects/Inventory__c/fields/B_roll__c.field-meta.xml
<CustomField>
    <fullName>B_roll__c</fullName>
    <label>B-roll</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>