force-app/main/default/objects/Inventory__c/fields/Backup_Camera__c.field-meta.xml
<CustomField>
    <fullName>Backup_Camera__c</fullName>
    <label>Backup Camera</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>