force-app/main/default/objects/Inventory__c/fields/Beam__c.field-meta.xml
<CustomField>
    <fullName>Beam__c</fullName>
    <label>Beam</label>
    <length>255</length>
    <type>Text</type>
</CustomField>