force-app/main/default/objects/Inventory__c/fields/Binnacle_SN__c.field-meta.xml
<CustomField>
    <fullName>Binnacle_SN__c</fullName>
    <label>Binnacle SN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>