force-app/main/default/objects/Inventory__c/fields/Board_racks__c.field-meta.xml
<CustomField>
    <fullName>Board_racks__c</fullName>
    <label>Board racks</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>