force-app/main/default/objects/Inventory__c/fields/Boat_Ballast_Weight__c.field-meta.xml
<CustomField>
    <fullName>Boat_Ballast_Weight__c</fullName>
    <label>Boat Ballast Weight</label>
    <length>5</length>
    <type>Text</type>
</CustomField>