force-app/main/default/objects/Inventory__c/fields/Boat_Capacities__c.field-meta.xml
<CustomField>
    <fullName>Boat_Capacities__c</fullName>
    <label>Boat Capacities</label>
    <length>4</length>
    <type>Text</type>
</CustomField>