force-app/main/default/objects/Inventory__c/fields/Boat_Cargo_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Boat_Cargo_Capacity__c</fullName>
    <label>Boat Cargo Capacity</label>
    <length>5</length>
    <type>Text</type>
</CustomField>