force-app/main/default/objects/Inventory__c/fields/Boat_Costline__c.field-meta.xml
<CustomField>
    <fullName>Boat_Costline__c</fullName>
    <label>Boat Costline</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>