force-app/main/default/objects/Inventory__c/fields/Boat_Draft__c.field-meta.xml
<CustomField>
    <fullName>Boat_Draft__c</fullName>
    <label>Boat Draft</label>
    <length>4</length>
    <type>Text</type>
</CustomField>