force-app/main/default/objects/Inventory__c/fields/Boat_EST_Arrival_Date__c.field-meta.xml
<CustomField>
    <fullName>Boat_EST_Arrival_Date__c</fullName>
    <label>Boat EST Arrival Date</label>
    <type>Date</type>
</CustomField>