force-app/main/default/objects/Inventory__c/fields/Boat_Fuel_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Boat_Fuel_Capacity__c</fullName>
    <label>Boat Fuel Capacity</label>
    <length>3</length>
    <type>Text</type>
</CustomField>