force-app/main/default/objects/Inventory__c/fields/Boat_Name__c.field-meta.xml
<CustomField>
    <fullName>Boat_Name__c</fullName>
    <label>Boat Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>