force-app/main/default/objects/Inventory__c/fields/Boat_Overall_Length__c.field-meta.xml
<CustomField>
    <fullName>Boat_Overall_Length__c</fullName>
    <label>Boat Overall Length</label>
    <length>10</length>
    <type>Text</type>
</CustomField>