force-app/main/default/objects/Inventory__c/fields/Boat_Seating_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Boat_Seating_Capacity__c</fullName>
    <label>Boat Seating Capacity</label>
    <length>4</length>
    <type>Text</type>
</CustomField>