force-app/main/default/objects/Inventory__c/fields/Boat_Weight__c.field-meta.xml
<CustomField>
    <fullName>Boat_Weight__c</fullName>
    <label>Boat Weight</label>
    <length>10</length>
    <type>Text</type>
</CustomField>