force-app/main/default/objects/Inventory__c/fields/Boat_Weight_Maximum_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Boat_Weight_Maximum_Capacity__c</fullName>
    <label>Boat Weight Maximum Capacity</label>
    <length>5</length>
    <type>Text</type>
</CustomField>