force-app/main/default/objects/Inventory__c/fields/Boats_Registration_Number__c.field-meta.xml
<CustomField>
    <fullName>Boats_Registration_Number__c</fullName>
    <label>Boats Registration Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>