force-app/main/default/objects/Inventory__c/fields/Bow__c.field-meta.xml
<CustomField>
    <fullName>Bow__c</fullName>
    <label>Bow</label>
    <length>32000</length>
    <type>Html</type>
</CustomField>