force-app/main/default/objects/Inventory__c/fields/Cabin__c.field-meta.xml
<CustomField>
    <fullName>Cabin__c</fullName>
    <label>Cabin</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>