force-app/main/default/objects/Inventory__c/fields/Commission_Stip__c.field-meta.xml
<CustomField>
    <fullName>Commission_Stip__c</fullName>
    <label>Commission Stip</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>