force-app/main/default/objects/Inventory__c/fields/Convertible_seating__c.field-meta.xml
<CustomField>
    <fullName>Convertible_seating__c</fullName>
    <label>Convertible seating</label>
    <length>32700</length>
    <type>Html</type>
</CustomField>