force-app/main/default/objects/Inventory__c/fields/Cooler__c.field-meta.xml
<CustomField>
    <fullName>Cooler__c</fullName>
    <label>Cooler</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>