force-app/main/default/objects/Inventory__c/fields/Cost_With_Rigging__c.field-meta.xml
<CustomField>
    <fullName>Cost_With_Rigging__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Cost With Rigging</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>