force-app/main/default/objects/Inventory__c/fields/Cost_With_Rigging_Formula__c.field-meta.xml
<CustomField>
    <fullName>Cost_With_Rigging_Formula__c</fullName>
    <formula>if(
  RecordType.DeveloperName = &apos;New_Boats&apos;  || RecordType.DeveloperName = &apos;Trailer&apos;
,
  Manufacture_Invoice2__c  +  Rigging_Cost__c  +  Transit_Expense__c 
,
  if(
     RecordType.DeveloperName = &apos;Used_Boats&apos; || RecordType.DeveloperName = &apos;Engine&apos;
  ,
     Cost__c   +  Rigging_Cost__c  +  Transit_Expense__c     
  ,
    0.00
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cost With Rigging</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>