force-app/main/default/objects/Inventory__c/fields/Costline__c.field-meta.xml
<CustomField>
    <fullName>Costline__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Margin (%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>