force-app/main/default/objects/Inventory__c/fields/Costline_Amount__c.field-meta.xml
<CustomField>
    <fullName>Costline_Amount__c</fullName>
    <label>Costline Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>