force-app/main/default/objects/Inventory__c/fields/Costline_Dollar__c.field-meta.xml
<CustomField>
    <fullName>Costline_Dollar__c</fullName>
    <label>Margin($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>