force-app/main/default/objects/Inventory__c/fields/Costline_Points__c.field-meta.xml
<CustomField>
    <fullName>Costline_Points__c</fullName>
    <description>The costline goal</description>
    <label>Costline Points</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>