force-app/main/default/objects/Inventory__c/fields/Costline_Value__c.field-meta.xml
<CustomField>
    <fullName>Costline_Value__c</fullName>
    <formula>1- Costline__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Costline Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>