force-app/main/default/objects/Inventory__c/fields/Curtailment_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Curtailment_Start_Date__c</fullName>
    <label>Curtailment Start Date</label>
    <type>Date</type>
</CustomField>