force-app/main/default/objects/Inventory__c/fields/Dash_cluster__c.field-meta.xml
<CustomField>
    <fullName>Dash_cluster__c</fullName>
    <label>Dash cluster</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>