force-app/main/default/objects/Inventory__c/fields/Dash_Screen__c.field-meta.xml
<CustomField>
    <fullName>Dash_Screen__c</fullName>
    <label>Dash Screen</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>