force-app/main/default/objects/Inventory__c/fields/Date_First_on_Sales_Lot__c.field-meta.xml
<CustomField>
    <fullName>Date_First_on_Sales_Lot__c</fullName>
    <label>Date First on Sales Lot</label>
    <type>Date</type>
</CustomField>