force-app/main/default/objects/Inventory__c/fields/Days_on_Lot__c.field-meta.xml
<CustomField>
    <fullName>Days_on_Lot__c</fullName>
    <formula>IF( ISNULL(Sold_Date__c) , TODAY()  -   Date_Arrived__c,Sold_Date__c  -   Date_Arrived__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculated by using a formula using the Date Arrived in stock.</inlineHelpText>
    <label>Days on Lot</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>