force-app/main/default/objects/Inventory__c/fields/Dealer__c.field-meta.xml
<CustomField>
    <fullName>Dealer__c</fullName>
    <inlineHelpText>Specifies the Dealer of the Product available in Inventory.</inlineHelpText>
    <label>Dealer</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Southtown Watersports</fullName>
            </value>
            <value>
                <fullName>South Indian Water Sport</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>