force-app/main/default/objects/Inventory__c/fields/Dealer_Base_Price__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Base_Price__c</fullName>
    <inlineHelpText>Comes from Product.It Specifies the Base Price of the Dealer for the Sale/Purchase.</inlineHelpText>
    <label>Dealer Base Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>