force-app/main/default/objects/Inventory__c/fields/Dealer_Boat_Stock__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Boat_Stock__c</fullName>
    <label>Dealer Boat Stock #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>