force-app/main/default/objects/Inventory__c/fields/Dealer_COD_Discount__c.field-meta.xml
<CustomField>
    <fullName>Dealer_COD_Discount__c</fullName>
    <inlineHelpText>Specifies the percentage of COD Discount.Comes from the corresponding Product.</inlineHelpText>
    <label>Dealer COD Discount %</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>