force-app/main/default/objects/Inventory__c/fields/Dealer_Discount__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Discount__c</fullName>
    <inlineHelpText>Comes from Product.Specifies the Discount %  on Price availed by the Dealer</inlineHelpText>
    <label>Dealer Discount %</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>