force-app/main/default/objects/Inventory__c/fields/Dealer_Flat_Discount__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Flat_Discount__c</fullName>
    <inlineHelpText>Comes from Product.Specifies the flat discount on the Product price, availed by the Dealer</inlineHelpText>
    <label>Dealer Flat Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>