force-app/main/default/objects/Inventory__c/fields/Dealer_Prep__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Prep__c</fullName>
    <label>Dealer Prep</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>