force-app/main/default/objects/Inventory__c/fields/Dealer_Status__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Status__c</fullName>
    <label>Dealer Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Dealer Stock</fullName>
            </value>
            <value>
                <fullName>Quoted</fullName>
            </value>
            <value>
                <fullName>Sale pending</fullName>
            </value>
            <value>
                <fullName>Owned</fullName>
            </value>
            <value>
                <fullName>Sale Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>