force-app/main/default/objects/Inventory__c/fields/Dealer_Stock__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Stock__c</fullName>
    <label>Dealer Stock #</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>