force-app/main/default/objects/Inventory__c/fields/Display_On_Web__c.field-meta.xml
<CustomField>
    <fullName>Display_On_Web__c</fullName>
    <label>Display On Web</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not On Website</fullName>
            </value>
            <value>
                <fullName>Website</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>