force-app/main/default/objects/Inventory__c/fields/Engine_4_SN__c.field-meta.xml
<CustomField>
    <fullName>Engine_4_SN__c</fullName>
    <label>Engine 4 SN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>