force-app/main/default/objects/Inventory__c/fields/Engine_compartment__c.field-meta.xml
<CustomField>
    <fullName>Engine_compartment__c</fullName>
    <label>Engine compartment</label>
    <length>32000</length>
    <type>Html</type>
</CustomField>