force-app/main/default/objects/Inventory__c/fields/Engine_Key_Number__c.field-meta.xml
<CustomField>
    <fullName>Engine_Key_Number__c</fullName>
    <label>Engine Key Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>