force-app/main/default/objects/Inventory__c/fields/Engine_Model__c.field-meta.xml
<CustomField>
    <fullName>Engine_Model__c</fullName>
    <label>Engine Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>