force-app/main/default/objects/Inventory__c/fields/External_Website__c.field-meta.xml
<CustomField>
    <fullName>External_Website__c</fullName>
    <label>External Website</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Only Inboards</fullName>
            </value>
            <value>
                <fullName>Boat Trader</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>