force-app/main/default/objects/Inventory__c/fields/Extra_Pic_Three__c.field-meta.xml
<CustomField>
    <fullName>Extra_Pic_Three__c</fullName>
    <label>Extra Pic Three</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>