force-app/main/default/objects/Inventory__c/fields/Floor_Plan_Bank__c.field-meta.xml
<CustomField>
    <fullName>Floor_Plan_Bank__c</fullName>
    <label>Floor Plan Bank</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Wells Fargo</fullName>
            </value>
            <value>
                <fullName>NorthPointe</fullName>
            </value>
            <value>
                <fullName>North Pointe Send-It</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>