force-app/main/default/objects/Inventory__c/fields/HIN_Number__c.field-meta.xml
<CustomField>
    <fullName>HIN_Number__c</fullName>
    <label>HIN Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>