force-app/main/default/objects/Inventory__c/fields/Hull_ID__c.field-meta.xml
<CustomField>
    <fullName>Hull_ID__c</fullName>
    <label>Hull ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>