force-app/main/default/objects/Inventory__c/fields/Hull_Material__c.field-meta.xml
<CustomField>
    <fullName>Hull_Material__c</fullName>
    <label>Hull Material</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fiberglass</fullName>
            </value>
            <value>
                <fullName>Wood</fullName>
            </value>
            <value>
                <fullName>Aluminum</fullName>
            </value>
            <value>
                <fullName>Steel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>