force-app/main/default/objects/Inventory__c/fields/In_Stock_Cost__c.field-meta.xml
<CustomField>
    <fullName>In_Stock_Cost__c</fullName>
    <formula>Quantity__c * Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula : Quantity * Cost</inlineHelpText>
    <label>In Stock Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>