force-app/main/default/objects/Inventory__c/fields/Instant_Quote_Margin__c.field-meta.xml
<CustomField>
    <fullName>Instant_Quote_Margin__c</fullName>
    <label>Instant Quote Margin</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>.10</fullName>
            </value>
            <value>
                <fullName>.11</fullName>
            </value>
            <value>
                <fullName>.12</fullName>
            </value>
            <value>
                <fullName>.13</fullName>
            </value>
            <value>
                <fullName>.14</fullName>
            </value>
            <value>
                <fullName>.15</fullName>
            </value>
            <value>
                <fullName>.16</fullName>
            </value>
            <value>
                <fullName>.17</fullName>
            </value>
            <value>
                <fullName>.18</fullName>
            </value>
            <value>
                <fullName>.19</fullName>
            </value>
            <value>
                <fullName>.20</fullName>
            </value>
            <value>
                <fullName>.21</fullName>
            </value>
            <value>
                <fullName>.22</fullName>
            </value>
            <value>
                <fullName>.23</fullName>
            </value>
            <value>
                <fullName>.24</fullName>
            </value>
            <value>
                <fullName>.25</fullName>
            </value>
            <value>
                <fullName>.26</fullName>
            </value>
            <value>
                <fullName>.27</fullName>
            </value>
            <value>
                <fullName>.28</fullName>
            </value>
            <value>
                <fullName>.29</fullName>
            </value>
            <value>
                <fullName>.30</fullName>
            </value>
            <value>
                <fullName>.31</fullName>
            </value>
            <value>
                <fullName>.32</fullName>
            </value>
            <value>
                <fullName>.33</fullName>
            </value>
            <value>
                <fullName>.34</fullName>
            </value>
            <value>
                <fullName>.35</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>