force-app/main/default/objects/Inventory__c/fields/Interior_Design_Bow__c.field-meta.xml
<CustomField>
    <fullName>Interior_Design_Bow__c</fullName>
    <label>Bow</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>