force-app/main/default/objects/Inventory__c/fields/Invoice_Number_Text__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Number_Text__c</fullName>
    <label>Invoice Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>