force-app/main/default/objects/Inventory__c/fields/Link_To_Inventory__c.field-meta.xml
<CustomField>
    <fullName>Link_To_Inventory__c</fullName>
    <formula>HYPERLINK(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))+&quot;/&quot;+Id, &quot;LinkToInventory&quot; , &quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Link To Inventory</label>
    <type>Text</type>
</CustomField>