force-app/main/default/objects/Inventory__c/fields/Main_color__c.field-meta.xml
<CustomField>
    <fullName>Main_color__c</fullName>
    <label>Main color</label>
    <length>30</length>
    <type>Text</type>
</CustomField>