force-app/main/default/objects/Inventory__c/fields/Make__c.field-meta.xml
<CustomField>
    <fullName>Make__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Make</label>
    <referenceTo>Manufacturer__c</referenceTo>
    <relationshipLabel>Inventory (Make)</relationshipLabel>
    <relationshipName>Inventory1</relationshipName>
    <type>Lookup</type>
</CustomField>