force-app/main/default/objects/Inventory__c/fields/Manufacture_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Manufacture_Invoice__c</fullName>
    <label>Manufacture Invoice(Dep)</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>