force-app/main/default/objects/Inventory__c/fields/Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>Manufacturer__c</fullName>
    <description>Contains the detail of the product manufacturer.</description>
    <label>Manufacturer</label>
    <length>50</length>
    <type>Text</type>
</CustomField>