force-app/main/default/objects/Inventory__c/fields/Mfg_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Mfg_Invoice__c</fullName>
    <description>This is the Manufacture Invoice on the boat, this will be used for cost of boat on sold boat invoices</description>
    <label>Mfg Invoice</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>