force-app/main/default/objects/Inventory__c/fields/Min_ACV_Difference__c.field-meta.xml
<CustomField>
    <fullName>Min_ACV_Difference__c</fullName>
    <formula>IF(RecordType.DeveloperName = &apos;Used_Boats&apos;, Minimum_Sell_Price__c - ACV__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Min/ACV  Difference</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>