force-app/main/default/objects/Inventory__c/fields/Minimum_Sales_Price_Manual__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Sales_Price_Manual__c</fullName>
    <label>Minimum Sales Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>