force-app/main/default/objects/Inventory__c/fields/Minimum_Sell_Price__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Sell_Price__c</fullName>
    <formula>Total_Dealer_Price__c / Costline_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Minimum Sell Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>