force-app/main/default/objects/Inventory__c/fields/Miscellaneous_Notes__c.field-meta.xml
<CustomField>
    <fullName>Miscellaneous_Notes__c</fullName>
    <label>Miscellaneous Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>