force-app/main/default/objects/Inventory__c/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <description>Specifies the model of the particular product manufacturer</description>
    <label>Model</label>
    <length>50</length>
    <type>Text</type>
</CustomField>